2005-02-15  Øyvind Kolås  <pippin@freedesktop.org>

	* packages/cairo/ext/rb_cairo.c: added initialization of pattern.
	* packages/cairo/ext/rb_cairo_constants.c: added filter and extend
	enums.
	* packages/cairo/ext/rb_cairo_context.c: added pattern setting and
	getting, rewrote current_matrix to use rb_cairo_matrix_wrap.
	* packages/cairo/ext/rb_cairo_matrix.c: convenience function to
	wrap a cairo_matrix_t.
	* packages/cairo/ext/rb_cairo_pattern.c: added implementation for
	surface and linear/radial gradients.
	* packages/cairo/lib/cairo.rb: syntactic sugar for initializing
	gradient patterns with blocks.
	* samples/gradients.rb: sample showing the syntax of gradients.


2005-02-10  Øyvind Kolås  <pippin@freedesktop.org>

	* packages/cairo/lib/cairo.rb: added optional 'handler' parameters to
	Context::current_path and Context#current_path_flat.
	patch from <mental@rydia.net>

2005-02-10  Øyvind Kolås  <pippin@freedesktop.org>

	* packages/cairo/lib/cairo.rb: made save_internal private,
	patch from <mental@rydia.net>

2005-02-10  Øyvind Kolås  <pippin@freedesktop.org>

	* packages/svgcairo/ext/rb_svgcairo.c: added error handling.
	usage of a port for passing FILE stream to the parser.
	* packages/svgcairo/ext/extconf.rb: added -W to the compile flags.

2005-02-10  Øyvind Kolås  <pippin@freedesktop.org>

	* packages/svgcairo/ext: added initial binding for libsvg-cairo,
	without error checking, and good integration with the ruby file
	handling.

005-02-09  Øyvind Kolås  <pippin@freedesktop.org>

	* packages/cairo/lib/cairo.rb: Fixed naming of Transform class to be
	Matrix.

2005-02-09  Øyvind Kolås  <pippin@freedesktop.org>

	* packages/cairo/lib/cairo.rb: Added the ability for save to
	take a block.

2005-02-07  Øyvind Kolås  <pippin@freedesktop.org>

	* splitted into seperate files for classes
	* made use of _SELF macro for more direct access
	* unified under a rb_ namespace
	* added font handling and extents

2005-02-06  Øyvind Kolås  <pippin@freedesktop.org>
